--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
 			<div>
 				<div class="connect">
 					<a href="http://freewebsitetemplates.com/go/twitter/" class="twitter">twitter</a>
-					<a href="https://www.youtube.com/channel/UCLx3wt7HbteOYlvDHGY0E5w" class="youtube">googleplus</a>
+					<a href="https://www.youtube.com/channel/UCLx3wt7HbteOYlvDHGY0E5w" class="youtube">youtube</a>
 					<a href="http://freewebsitetemplates.com/go/discord/" class="discord">facebook</a>
 					<a href="http://freewebsitetemplates.com/go/googleplus/" class="googleplus">googleplus</a>
-					<a href="http://pinterest.com/fwtemplates/" class="pinterest">pinterest</a>
 				</div>
 				<p>&copy; 2023 by RNRNR. All rights reserved.</p>
 			</div>
